kubernetes/apps/observability/gatus/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gatus
  namespace: observability
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  serviceName: gatus
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
      app.kubernetes.io/instance: gatus
      app.kubernetes.io/controller: gatus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
        app.kubernetes.io/instance: gatus
        app.kubernetes.io/controller: gatus
    spec:
      serviceAccountName: gatus
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/twin/gatus:v5.35.0@sha256:21609f31be8c4e680ce3004b24276305666239c99aff58391503f3fb6142f39d
          ports:
            - name: http
              containerPort: 80
          livenessProbe: &probe
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              add:
                - NET_RAW
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-file
              mountPath: /config/config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: config-file
          configMap:
            name: gatus-configmap
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-block
        resources:
          requests:
            storage: 5Gi
